[package]
name = "pinky-swear"
version = "2.0.0" # remember to update html_root_url
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
edition = "2018"
description = "Futures and async/await-ready Promises"
repository = "https://github.com/Keruspe/pinky-swear"
documentation = "https://docs.rs/pinky-swear"
license = "BSD-2-Clause"
keywords = [ "futures", "promises", "async" ]
categories = [ "asynchronous" ]

[dependencies]
doc-comment = "^0.3"
log = "^0.4"
parking_lot = '^0.10'
