[package]
name = "pinky-swear"
version = "6.2.0" # remember to update html_root_url
authors = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
edition = "2021"
description = "Futures and async/await-ready Promises"
repository = "https://github.com/amqp-rs/pinky-swear"
documentation = "https://docs.rs/pinky-swear"
license = "BSD-2-Clause"
keywords = [ "futures", "promises", "async" ]
categories = [ "asynchronous" ]
rust-version = "1.56.0"

[dependencies]
doc-comment = "^0.3"
parking_lot = "^0.12"

[dependencies.flume]
version = "^0.11"
default-features = false

[dependencies.tracing]
version = "^0.1"
default-features = false

[badges]
maintenance = { status = "actively-developed" }
